# C_CrossRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  CommonLoaders.c  CommonLoaders.h  CrossRenderer.c  CrossRenderer.h  CrossRendererConfig.h.in  Framebuffer.h  KeyDefinitions.h  PixelFormat.c  PixelFormat.h  RenderCommand.c  RenderCommand.h  RenderStateDefinitions.h  RendererDefinitions.h  Shader.c  Shader.h  ShaderBuffer.h  Texture.c  Texture.h  WindowManagerDefinitions.h  target_warning_options.cmake
ExternalModules/glad_core/include/glad/: glad.h
ExternalModules/glad_core/src/: glad.c
ExternalModules/glad_glx/include/glad/: glad_glx.h
ExternalModules/glad_glx/src/: glad_glx.c
ExternalModules/glad_wgl/include/glad/: glad_wgl.h
ExternalModules/glad_wgl/src/: glad_wgl.c
Internal/: CrossRendererFunctionPointers.h  RendererTemplateSignatures.h  WindowManagerInternal.c  WindowManagerInternal.h
OpenGL4/: GL4Context.c  GL4Context.h  GL4Framebuffer.c  GL4Framebuffer.h  GL4Internals.c  GL4Internals.h  GL4Renderer.c  GL4Renderer.h  GL4Shader.c  GL4Shader.h  GL4ShaderBuffer.c  GL4ShaderBuffer.h  GL4StateCache.c  GL4StateCache.h  GL4Texture.c  GL4Texture.h  GL4texture.h
OpenGL4/GLX/: GLXContext.c  GLXContext.h
OpenGL4/WGL/: WGLContext.c  WGLContext.h
Renderer/: texture_descriptor.c  texture_descriptor.h
Renderer/OpenGL4/: GL4Internals.c  GL4Internals.h  GL4texture.c  GL4texture.h
Tests/: CommonLoaders.c  CommonLoaders.h
Tests/InstancedSpinningCubes/: InstancedSpinningCube.c
Tests/RenderingWindowTest/: RenderingWindowTest.c
Tests/SpinningCube/: SpinningCube.c
Tests/TexturedQuad/: TexturedQuad.c
Tests/WindowTest/: WindowTest.c
WindowManager/: WindowManager.c  WindowManager.h
WindowManager/GLX/: GLXContext.c  GLXContext.c.autosave  GLXContext.h
WindowManager/Internal/: WindowManagerInternal.c  WindowManagerInternal.h
WindowManager/WGL/: WGLContext.c  WGLContext.h
WindowManager/Windows/: WindowsBackend.c  WindowsBackend.h
WindowManager/X11/: X11Backend.c  X11Backend.h  X11Internal.h
Windows/: WindowsBackend.c
